--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,27 @@ target
 /.project
 /.settings
 /RUNNING_PID
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+/project/*-shim.sbt
+/activator-sbt-*-shim.sbt
+.bin
+bin
+/.cache
+/.target
+.worksheet
+.tmpBin
+projectFilesBackup
