--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,16 @@ bin
 .worksheet
 .tmpBin
 projectFilesBackup
+*.class
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
